--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           rel="stylesheet" type="text/css">
     <style type="text/css">
 
-      /* Large desktop */
+      /* For a large desktop */
       @media (min-width: 980px) { 
         body {
          padding-top: 60px;
@@ -41,9 +41,9 @@
        }
       }
 
-      /* All form factors */
+      /* For all form factors */
 
-      /* Main body and headings */
+      /* The main body and headings */
       body{
         font-family: 'Open Sans', Helvetica, Arial, sans-serif;
       }
@@ -125,9 +125,9 @@
       </div>
     </div>
 
-    <!-- We use row-fluid inside containers to achieve a resizable layout. -->
+    <!-- We use row-fluid inside containers to achieve a resizable layout.  -->
     <!-- blogs.endjin.com/2013/04/tips-for-implementing-responsive-designs-using-bootstrap/ -->
-    <!-- http://stackoverflow.com/a/12270322 -->
+    <!-- http://stackoverflow.com/a/12270322  -->
     <div class="container">
       <!-- Font and paired font of .heading/.subheading and body from Google Fonts -->
       <!-- www.google.com/fonts/specimen/Ubuntu -->
@@ -139,7 +139,7 @@
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
-          <!-- Special typography from Bootstrap for lead paragraph. -->
+          <!-- Special typography from Bootstrap for first paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
           <p class="lead">One sentence description.</p>
         </div>
@@ -149,7 +149,7 @@
           <img class="img-polaroid" src="http://placehold.it/480x300">
         </div>
 
-        <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
+        <!-- Define a new 'actions' div to contain statistics, order, and share buttons.-->
         <div class="span5 actions">
           <div class="span8 offset2">
             <div class="statistics">
@@ -195,7 +195,7 @@
         </div>
       </div>
 
-      <!-- Beyond this part the marketing copy begins. -->
+      <!-- Beyond this part my marketing copy begins. -->
       <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
       <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
       <!-- http://placehold.it -->
@@ -286,8 +286,7 @@
           <p>This work is licensed under
             the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
               By-SA 3.0
-            </a>, without all the cruft that would otherwise be
-            put at the bottom of the page.</p>
+            </a>Alan R. Jones (2013)</p>
         </div>
       </div>
     </div>
